@@ -519,6 +519,7 @@ Other Changes
   - SOLR-11113: Randomize PointFields in analysis-err-schema.xml, schema-hash.xml, and all affected tests (hossman)
   - SOLR-11114: Randomize PointFields in schema-customfield.xml and TestOverriddenPrefixQueryForCustomFieldType (hossman)
   - SOLR-11074: Randomize PointFields in cloud-dynamic configset and all related tests (Anshum Gupta)
+  - SOLR-11121: Randomize PointFields in schema-trie.xml and TestTrie (hossman)
 
 * SOLR-6807: Changed requestDispatcher's handleSelect to default to false, thus ignoring "qt".
   Simplified configs to not refer to handleSelect or "qt".  Switch all tests that assumed true to assume false
